# vfs-writeup

./: .gitignore  AGENTS.md  Cargo.toml  README.md  mkdocs.yml
docs/: Behaviours.md  DLL-Hijacking.md  Filesystem-Architecture.md  Implementation-Strategy.md  index.md
docs/File-Emulation-Framework/: About.md  Read-Performance.md
docs/File-Emulation-Framework/Implementation-Details/: Hooks.md
docs/Hooking-Implementation/: File-Redirection.md  Overview.md
docs/Hooking-Implementation/Virtual-Files/: DirectStorage.md  Memory-Mapped-Files.md  Standard-IO.md
docs/Technology-Integrations/: DLL-Hijacking.md  DirectStorage.md  Memory-Map-Hooking.md
docs/Virtual-FileSystem/: Programmer-Usage.md
docs/Virtual-FileSystem/Implementation-Details/: Optimizations.md
docs/Virtual-FileSystem/Programmer-Usage/: API-Reference.md  Usage-Reloaded3.md  Usage-Standalone.md
docs/Virtual-FileSystem/Usage/: As-Standalone.md  From-Reloaded.md
examples/: Cargo.toml
examples/hello-directstorage/: Cargo.toml  README.md  build.rs
examples/hello-directstorage/src/: main.rs
examples/mmap-hook/: Cargo.toml  README.md
examples/mmap-page-fault/: Cargo.toml  README.md
examples/mmap-page-fault/src/: content.rs  hooks.rs  main.rs
examples/mmap-pre-populate/: Cargo.toml  README.md
examples/mmap-pre-populate/src/: content.rs  hooks.rs  main.rs  nt_types.rs
examples/pe-import-patching/: Cargo.toml  README.md
