[workspace]
resolver = "2"
members = ["hello-directstorage"]
# Future members (not yet implemented):
# "mmap-hook",
# "pe-import-patching",

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["VFS Documentation Contributors"]

[workspace.dependencies]
direct-storage = { git = "https://github.com/Tsukisoft/direct-storage-rs" }
windows = { version = "0.62", features = [
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
] }
